--- a/src/assets/sass/layouts/_subcontainers.scss
+++ b/src/assets/sass/layouts/_subcontainers.scss
@@ -1,35 +1,16 @@
 @use '../base/' as base;
 
 .component-container {
-	@include base.border($shadow: true);
 	min-height: 50vh;
 	width: 100vw;
-	background-color: base.$MainScheme3;
 	margin: 1rem auto;
+	margin-bottom: 5rem;
+	padding: 1rem;
 	scroll-behavior: smooth;
   // This is the line that makes the header row scroll to the top of the page and needs to be changed when top nav-bar dimensions change
 	scroll-margin-block-start: 9rem;
 }
 
 .project-row {
-	@include base.flex-row-center;
-}
-
-.row-image {
-	width: 70%;
-	height: 70%;
-	object-fit: contain;
-	margin-bottom: 1.5rem;
-	@include base.border($shadow: true, $border: true, $thickness: 3px, $color: base.$MainScheme4);
-	&:hover {
-		@include base.border($shadow: true, $border: true, $thickness: 3px, $color: base.$MainScheme1);
-	}
-}
-
-.screenshot {
-	@include base.border($border: true, $thickness: 2px, $color: base.$MainScheme4, $radius: true);
-	margin-bottom: 1rem;
-	&:hover {
-		@include base.border($shadow: true)
-	}
+	@include base.flex-row-start;
 }
