--- a/src/assets/sass/components/_icons.scss
+++ b/src/assets/sass/components/_icons.scss
@@ -4,7 +4,7 @@
   margin-left: 1rem;
   color: base.$MainScheme1;
   &:hover {
-    color: base.$Accent1;
+    color: white;
   };
   &:active {
     color: base.$Accent2;
