--- a/src/assets/sass/effects/_fade_in_containers.scss
+++ b/src/assets/sass/effects/_fade_in_containers.scss
@@ -1,11 +1,10 @@
 .fade-in-section {
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 1400ms ease-out,
-    visibility 1400ms ease-out;
-  will-change: opacity, visibility;
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity 1700ms ease-out, visibility 1700ms ease-out;
+	will-change: opacity, visibility;
 }
 .fade-in-section.is-visible {
-  opacity: 1;
-  visibility: visible;
+	opacity: 1;
+	visibility: visible;
 }
