cleaned up component code and added new compnent that will be repeatable and take the place of individual conponents.  Props will be passed thorugh to this new compnent with things like id, title, links, image links, descriptions, etc, and each of these lists of items can be stored somewhere and just mapped over

--- a/src/assets/sass/base/_elements.scss
+++ b/src/assets/sass/base/_elements.scss
@@ -34,4 +34,9 @@ a {
 ul {
   color: colors.$MainScheme1;
   list-style-type: none;
+  @include mixins.flex-row-center
+}
+
+li {
+  margin: 0.5rem;
 }
