--- a/src/assets/sass/components/_images.scss
+++ b/src/assets/sass/components/_images.scss
@@ -1,7 +1,12 @@
 @use '../base/' as base;
 
+.image-row {
+	@include base.flex-row-center;
+}
+
 .screenshot {
-	@include base.border($border: true, $thickness: 2px, $color: gray, $radius: true);
+	@include base.border($radius: true);
+	max-width: 300px;
 	margin-bottom: 1rem;
 	&:hover {
 		@include base.border($shadow-light-full: true)
